@@ -1,15 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/selinux-hal-20070329.ebuild,v 1.3 2009/07/22 13:12:30 pebenito Exp $
-
-IUSE=""
-
-MODS="hal"
-
-inherit selinux-policy-2
-
-RDEPEND="sec-policy/selinux-dbus"
-
-DESCRIPTION="SELinux policy for desktops"
-
-KEYWORDS="amd64 x86"
